Icon class and alignment fix

--- a/Application/MAPP/src/app/weather/current-weather/weather-status/weather-status.component.css
+++ b/Application/MAPP/src/app/weather/current-weather/weather-status/weather-status.component.css
@@ -16,6 +16,6 @@
 }
 
 .statusIcon {
-    flex-grow: 50px;
-    margin-left: 500px;
+    width: 50;
+    height: 50;
 }
